--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -13,3 +13,16 @@
 .virtual-top-observer {
   background-color: rgba(255, 7, 63, 0.25);
 }
+
+.loader {
+  animation: rotation 1s linear infinite;
+  }
+
+@keyframes rotation {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+}
